# gimmeurl

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  receiver.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
