[package]
name = "gimmeurl"
version = "1.0.1"
description = "GimmeURL — Hybrid P2P + WebRTC + LAN file sharing"
authors = ["Aryan S. Rao"]
edition = "2021"

[[bin]]
name = "gimmeurl"
path = "src/main.rs"

[lib]
name = "gimmeurl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri               = { version = "2.10", features = [] }
tauri-plugin-shell  = "2.3"
tauri-plugin-dialog = "2"

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["io", "codec"] }
futures     = "0.3"
futures-util = "0.3"

# HTTP server
axum        = { version = "0.7", features = ["multipart"] }
tower-http  = { version = "0.5", features = ["cors", "fs", "set-header"] }
tower       = { version = "0.4" }
hyper       = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Utilities
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
dashmap     = "5"
humansize   = "2"
once_cell   = "1"
sha2        = "0.10"
hex         = "0.4"

# QR code
qrcode      = "0.14"
image       = "0.25"

# Network
local-ip-address = "0.6"

# SSE signaling
tokio-stream     = { version = "0.1", features = ["sync"] }

# Async broadcast channels
async-broadcast  = "0.7"

# ── macOS 26 fix: patch tao to latest which fixes did_finish_launching panic ──
[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
